<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectComidaFragment">

    <TextView
        android:id="@+id/txtSelComida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/txtDesComida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <RadioGroup
        android:id="@+id/radioGroupComida"
        app:layout_constraintVertical_bias="0.08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelComida">

        <RadioButton
            android:id="@+id/rbCupcacke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cupcacke" />

        <RadioButton
            android:id="@+id/rbBrownie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Brownie" />

        <RadioButton
            android:id="@+id/rbTrufa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Trufa" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSiguienteOpcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/msg_nuevaorden"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupComida" />


</androidx.constraintlayout.widget.ConstraintLayout>