<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectComidaFragment">

    <TextView
        android:id="@+id/txtSelExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/txtSelExtra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <RadioGroup
        android:id="@+id/radioGroupExtra"
        app:layout_constraintVertical_bias="0.08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelExtra">

        <RadioButton
            android:id="@+id/rbCremaPastelera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CremaPastelera" />

        <RadioButton
            android:id="@+id/rbFodge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fodge" />

        <RadioButton
            android:id="@+id/rbChispitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Chispitas" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/msg_companiaDulce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupExtra" />


</androidx.constraintlayout.widget.ConstraintLayout>